# smp_renode

./: README.md  pyproject.toml
.github/workflows/: build.yml
smp_renode/: hci_custom.py  simulator.py  smp_ble.py  virtual_dfu.py
zephyr/: readme.md
zephyr/dfu/: readme.md
zephyr/hex/: smp_hci_uart_nrf52840.hex
zephyr/smp_hci_uart/: prj.conf  west.yml
zephyr/smp_hci_uart/boards/: nrf52840dk_nrf52840.overlay
zephyr/smp_hci_uart/src/: bluetooth.c  main.c
zephyr/smp_hci_uart/sysbuild/: CMakeLists.txt  sysbuild.conf
zephyr/smp_hci_uart/sysbuild/mcuboot/: prj.conf
zephyr/smp_hci_uart/sysbuild/mcuboot/boards/: nrf52840dk_nrf52840.overlay
