[tool.poetry]
name = "smp_renode"
version = "0.1.0"
description = "SMPClient support with Renode to simulate DFU over BLE"
authors = ["Victor Chavez <vchavezb@protonmail.com>"]
packages = []
readme = "README.md"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
smpclient =  { git = "https://github.com/vChavezB/smpclient.git", rev = "bleak_v1.0.1"}
bleak = { git = "https://github.com/vChavezB/bleak.git", rev = "0c655d06cdd1c92df4f9aa391f7ac7f86c0826c2",extras = ["bumble"] }
bumble = { version = "0.0.211"}
pyrenode3 = { git = "https://github.com/antmicro/pyrenode3.git", rev="0b23dca",  extras = ["all"] }
rich = "^14.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

